# vapoursynth-plusplus

./: Buffer.hxx  Clip.hxx  Core.hxx  Cosmetics.hxx  EntryPoint.cxx  Frame.hxx  GaussBlur.hxx  Globals.hxx  Infrastructure.hxx  Interface.hxx  Map.hxx  Plane.hxx  README.md  Range.hxx  SpatialPaddingPolicies.hxx  TemporalMedian.hxx  TemporalPaddingPolicies.hxx  TestFilter.hxx  gaussblur(example).cxx  meson.build  meson_options.txt  sugar.hpp
Examples/: Crop.hxx  EntryPoint.cxx  GaussBlur.hxx  GaussBlurFast.hxx  MaskedMerge.hxx  ModifyFrame.hxx  ModifyFrameExample.vpy  Palette.hxx  Rec601ToRGB.hxx  SeparableConvolution.hxx  TemporalMedian.hxx  Transpose.hxx  nnedi3_rpow2.hxx
Include/: Buffer.hxx  Clip.hxx  Core.hxx  Format.hxx  Frame.hxx  Globals.hxx  Infrastructure.hxx  Interface.hxx  Map.hxx  Plane.hxx  Plugin.hxx  Range.hxx  Reflection.hxx  SpatialPaddingPolicies.hxx  TemporalPaddingPolicies.hxx
include/: AudioFrame.vxx  AudioNode.vxx  Buffer.vxx  Clip.vxx  Core.vxx  DescriptiveAggregates.vxx  Descriptors.vxx  Enumerations.vxx  Format.vxx  Frame.vxx  FrameGenerator.vxx  Function.vxx  Globals.vxx  Infrastructure.vxx  Interface.vxx  Logger.vxx  LoggerController.vxx  Macros.vxx  Map.vxx  Metadata.vxx  Node.vxx  Owner.vxx  Plane.vxx  Plugin.vxx  PluginInstantiator.vxx  Range.vxx  RemappingFunctions.vxx  ResourceManager.vxx  SpatialPaddingPolicies.vxx  TemporalPaddingPolicies.vxx  UniversalContext.vxx  Utilities.vxx  Utility.vxx  VideoFrame.vxx  VideoNode.vxx
